outputs_20260331-043038-52495341/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extanke\AppData\Local\Temp\tdd_build_ewwf_k2i\src\gtm_tom_3_phase_inverter_pwm.c:12:
C:\Users\extanke\AppData\Local\Temp\tdd_build_ewwf_k2i\include/IfxGtm_Pwm.h:97:5: error: redeclaration of enumerator 'IfxGtm_Dtm_ClockSource_systemClock'
   97 |     IfxGtm_Dtm_ClockSource_systemClock,
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from C:\Users\extanke\AppData\Local\Temp\tdd_build_ewwf_k2i\include/IfxGtm_Pwm.h:6:
C:\Users\extanke\AppData\Local\Temp\tdd_build_ewwf_k2i\include/IfxGtm_Cmu.h:54:5: note: previous definition of 'IfxGtm_Dtm_ClockSource_systemClock' with type 'enum <anonymous>'
   54 |     IfxGtm_Dtm_ClockSource_systemClock,
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ewwf_k2i\include/IfxGtm_Pwm.h:98:5: error: redeclaration of enumerator 'IfxGtm_Dtm_ClockSource_cmuClock0'
   98 |     IfxGtm_Dtm_ClockSource_cmuClock0,
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ewwf_k2i\include/IfxGtm_Cmu.h:55:5: note: previous definition of 'IfxGtm_Dtm_ClockSource_cmuClock0' with type 'enum <anonymous>'
   55 |     IfxGtm_Dtm_ClockSource_cmuClock0,
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ewwf_k2i\include/IfxGtm_Pwm.h:99:5: error: redeclaration of enumerator 'IfxGtm_Dtm_ClockSource_cmuClock1'
   99 |     IfxGtm_Dtm_ClockSource_cmuClock1,
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ewwf_k2i\include/IfxGtm_Cmu.h:56:5: note: previous definition of 'IfxGtm_Dtm_ClockSource_cmuClock1' with type 'enum <anonymous>'
   56 |     IfxGtm_Dtm_ClockSource_cmuClock1,
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ewwf_k2i\include/IfxGtm_Pwm.h:100:5: error: redeclaration of enumerator 'IfxGtm_Dtm_ClockSource_cmuClock2'
  100 |     IfxGtm_Dtm_ClockSource_cmuClock2
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ewwf_k2i\include/IfxGtm_Cmu.h:57:5: note: previous definition of 'IfxGtm_Dtm_ClockSource_cmuClock2' with type 'enum <anonymous>'
   57 |     IfxGtm_Dtm_ClockSource_cmuClock2
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ewwf_k2i\include/IfxGtm_Pwm.h:101:3: error: conflicting types for 'IfxGtm_Dtm_ClockSource'; have 'enum <anonymous>'
  101 | } IfxGtm_Dtm_ClockSource;
      |   ^~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ewwf_k2i\include/IfxGtm_Cmu.h:58:3: note: previous declaration of 'IfxGtm_Dtm_ClockSource' with type 'IfxGtm_Dtm_ClockSource'
   58 | } IfxGtm_Dtm_ClockSource;
      |   ^~~~~~~~~~~~~~~~~~~~~~

In file included from C:\Users\extanke\AppData\Local\Temp\tdd_build_ewwf_k2i\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:5:
C:\Users\extanke\AppData\Local\Temp\tdd_build_ewwf_k2i\include/IfxGtm_Pwm.h:97:5: error: redeclaration of enumerator 'IfxGtm_Dtm_ClockSource_systemClock'
   97 |     IfxGtm_Dtm_ClockSource_systemClock,
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from C:\Users\extanke\AppData\Local\Temp\tdd_build_ewwf_k2i\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:3:
C:\Users\extanke\AppData\Local\Temp\tdd_build_ewwf_k2i\include/IfxGtm_Cmu.h:54:5: note: previous definition of 'IfxGtm_Dtm_ClockSource_systemClock' with type 'enum <anonymous>'
   54 |     IfxGtm_Dtm_ClockSource_systemClock,
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ewwf_k2i\include/IfxGtm_Pwm.h:98:5: error: redeclaration of enumerator 'IfxGtm_Dtm_ClockSource_cmuClock0'
   98 |     IfxGtm_Dtm_ClockSource_cmuClock0,
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ewwf_k2i\include/IfxGtm_Cmu.h:55:5: note: previous definition of 'IfxGtm_Dtm_ClockSource_cmuClock0' with type 'enum <anonymous>'
   55 |     IfxGtm_Dtm_ClockSource_cmuClock0,
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ewwf_k2i\include/IfxGtm_Pwm.h:99:5: error: redeclaration of enumerator 'IfxGtm_Dtm_ClockSource_cmuClock1'
   99 |     IfxGtm_Dtm_ClockSource_cmuClock1,
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ewwf_k2i\include/IfxGtm_Cmu.h:56:5: note: previous definition of 'IfxGtm_Dtm_ClockSource_cmuClock1' with type 'enum <anonymous>'
   56 |     IfxGtm_Dtm_ClockSource_cmuClock1,
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ewwf_k2i\include/IfxGtm_Pwm.h:100:5: error: redeclaration of enumerator 'IfxGtm_Dtm_ClockSource_cmuClock2'
  100 |     IfxGtm_Dtm_ClockSource_cmuClock2
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ewwf_k2i\include/IfxGtm_Cmu.h:57:5: note: previous definition of 'IfxGtm_Dtm_ClockSource_cmuClock2' with type 'enum <anonymous>'
   57 |     IfxGtm_Dtm_ClockSource_cmuClock2
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ewwf_k2i\include/IfxGtm_Pwm.h:101:3: error: conflicting types for 'IfxGtm_Dtm_ClockSource'; have 'enum <anonymous>'
  101 | } IfxGtm_Dtm_ClockSource;
      |   ^~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_ewwf_k2i\include/IfxGtm_Cmu.h:58:3: note: previous declaration of 'IfxGtm_Dtm_ClockSource' with type 'IfxGtm_Dtm_ClockSource'
   58 | } IfxGtm_Dtm_ClockSource;
      |   ^~~~~~~~~~~~~~~~~~~~~~
